<resources>
    <string name="app_name">SquadUp</string>
    <string name="signup_text">Sign Up</string>
    <string name="login_button">Log in</string>
    <string name="logout_button">Logout</string>
    <string name="login_info_text">Login information</string>
    <string name="personal_info_text">Personal information</string>
    <string name="signup_button">Sign Up</string>
    <string name="update_button">Update</string>
    <string name="home_title">Home</string>
    <string name="modify_info_button_desc">Modify personal information</string>
    <string name="logged_as_email_hint">Signed-in login e-mail</string>
    <string name="take_picture_button_desc">Take picture</string>
    <string name="logged_picture_desc">Shows user picture</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="skip">Skip</string>
    <string name="todo">TODO</string>
    <string name="log_in">Log In</string>
    <string name="or_with">or with</string>
    <string name="lineas_de_separacion">lineas de separacion</string>
    <string name="lineas_de_separacion2">lineas de separacion</string>
    <string name="logo_facebook">logoGoogle</string>
    <string name="select">Select Item</string>
</resources>