<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CECECE"
    android:foregroundTint="#CECECE"
    tools:context=".view.SignUpActivity">

    <Button
        android:id="@+id/set_game_button3"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:backgroundTint="#686868"
        android:text="set game"
        app:layout_constraintEnd_toEndOf="@+id/game_name_spinner2"
        app:layout_constraintStart_toStartOf="@+id/game_name_spinner2"
        app:layout_constraintTop_toBottomOf="@+id/game_name_spinner2"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:text=" Game rank"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/set_game_button3"
        app:layout_constraintStart_toStartOf="@+id/set_game_button3"
        app:layout_constraintTop_toBottomOf="@+id/set_game_button3" />

    <Spinner
        android:id="@+id/game_rank_spinner2"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:ignore="TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/game_name_spinner2"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:text="Favourite Game"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/updateDescriptionText"
        app:layout_constraintStart_toStartOf="@+id/updateDescriptionText"
        app:layout_constraintTop_toBottomOf="@+id/updateDescriptionText" />

    <EditText
        android:id="@+id/signUpEmailText"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="E-mail"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/signUpPasswordText"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/signUpEmailText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/signUpEmailText"
        app:layout_constraintTop_toBottomOf="@+id/signUpEmailText"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/updateDescriptionText"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="Description"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="@+id/updateNicknameText"
        app:layout_constraintStart_toStartOf="@+id/updateNicknameText"
        app:layout_constraintTop_toBottomOf="@+id/updateNicknameText"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/updateNicknameText"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="Nickname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/signUpEmailText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signUpEmailText"
        app:layout_constraintTop_toBottomOf="@+id/signUpPasswordText"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:text="@string/or_with"
        android:textColor="#170028"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView13"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/game_rank_spinner2" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="159dp"
        android:layout_height="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/lineas_de_separacion2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_rank_spinner2"
        app:srcCompat="@drawable/linia_horizontal"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="234dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#170028"
        android:text="@string/signup_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/game_rank_spinner2"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintStart_toStartOf="@+id/game_rank_spinner2"
        app:layout_constraintTop_toBottomOf="@+id/imageView14"
        app:layout_constraintVertical_bias="0.102"
        tools:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="159dp"
        android:layout_height="4dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/lineas_de_separacion2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_rank_spinner2"
        app:srcCompat="@drawable/linia_horizontal"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="43dp"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.101"
        app:srcCompat="@drawable/google" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="241dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_letras" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Sign Up"
        android:textColor="#170028"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="57dp"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_sin_nombre" />
</androidx.constraintlayout.widget.ConstraintLayout>